tests/compError/retInStruct.ucl
// compError
// error: unexpected return
// tests/compError/retInStruct.ucl:6 -> here

const test = struct {
	ret;
};